--- a/style.css
+++ b/style.css
@@ -1046,6 +1046,11 @@ font-size: 1rem;
  background: rgba(147, 161, 226, 0.329);
  }
 
+ .latest-product-left img {
+  width: 100%;
+  height: 120%;
+ }
+
  .latest-product-right{
   width: 11.5rem;
   height: 100%;
