--- a/style.css
+++ b/style.css
@@ -1098,13 +1098,153 @@ font-size: 1rem;
   color: white;
 }
 
+/**
+* CUSTOMER GUARANTEE
+**/
+.customer-guarantee {
+  width: 100%;
+  height: 10rem;
+  align-items: center;
+  justify-self: center;
+  justify-content: center;
+  display: flex;
+  background-color: var(--cl-featured-deal);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.customer-guarantee-container {
+  width: 90%;
+  height: 8rem;
+  display: flex;
+  align-self: center;
+  justify-self: center;
+  margin: 0.5rem;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
+  background: rgba(185, 182, 185, 0.212);
+  border: 0.1px solid var(--br-1px);
+}
+
+.customer-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  width: 30%;
+  height: 100%;
+}
+
+.customer-right{
+  display: flex;
+  width: 70%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+}
 
 
+.section5-offer-products {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 25rem;
+  position: relative;
+  align-items: center;
+  justify-self: center;
+  align-self: center;
+  border: none;
+  justify-content: flex-start;
+  background: rgba(196, 192, 192, 0.548);
+  border: 0.1px solid #ccc;
+  margin-bottom: 2rem;
+  margin-top: 0.5rem;
+  overflow: hidden;
+}
+
+.offer-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-self: center;
+  width: 315px;
+  gap: 0;
+  height: 12rem;
+  background: rgb(48, 48, 80);
+  border: rgb(48, 48, 80);
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.offer-product-left {
+  display: flex;
+  width: 48%;
+  height: 11rem;
+  flex-direction: column;
+  background-color: white;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.offer-product-right {
+  display: flex;
+  width: 48%;
+  height: 11rem;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+}
+
+.offer-product-right img {
+  width: 100%;
+  height: 100%;
+}
 
 
+ .offer-deal-off {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: max-content;
+  height: 2rem;
+  color: rgb(236, 233, 7);
+  font-weight: 600;
+  margin-right: 6.4rem;
+  margin-top: -2.3rem;
+  text-align: center;
+  background-color: transparent;
+  border: 0.1px solid  rgba(147, 161, 226, 0.329);
+}
 
+.offer-deal-off img{
+width: 3rem;
+height: 2rem;
+}
 
+.offer-btn {
+  border: 0.1px solid rgba(147, 161, 226, 0.329);
+  width: 80%;
+  height: 1.9rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  border-radius: 12px;
+  font-size: 1rem;
+  background-color: var(--cl-btn);
+  transition: 1s ease-in-out;
+}
 
+.offer-btn:hover {
+  background-color: rgba(32, 60, 185, 0.877);
+  color: white;
+}
 
 
 
