--- a/style.css
+++ b/style.css
@@ -1103,7 +1103,7 @@ font-size: 1rem;
 **/
 .customer-guarantee {
   width: 100%;
-  height: 10rem;
+  height: 27rem;
   align-items: center;
   justify-self: center;
   justify-content: center;
@@ -1114,35 +1114,38 @@ font-size: 1rem;
 }
 
 .customer-guarantee-container {
-  width: 90%;
-  height: 8rem;
+  width: 95%;
+  height: 25rem;
   display: flex;
   align-self: center;
   justify-self: center;
   margin: 0.5rem;
   align-items: center;
   justify-content: space-between;
-  gap: 0;
-  background: rgba(185, 182, 185, 0.212);
-  border: 0.1px solid var(--br-1px);
+  gap: 0.2rem;
+  text-align: center;
+  background: transparent;
+  border: 0.1px solid white;
 }
 
 .customer-left {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   background: transparent;
-  width: 30%;
+  width: 25%;
   height: 100%;
 }
 
 .customer-right{
   display: flex;
-  width: 70%;
+  width: 75%;
   height: 100%;
   align-items: center;
   justify-content: center;
   text-align: center;
+  line-height: 1.5;
+  font-size: 18px;
   color: white;
 }
 
@@ -1171,7 +1174,7 @@ font-size: 1rem;
   align-items: center;
   justify-content: center;
   justify-self: center;
-  width: 315px;
+  width: 30rem;
   gap: 0;
   height: 12rem;
   background: rgb(48, 48, 80);
@@ -1214,8 +1217,8 @@ font-size: 1rem;
   height: 2rem;
   color: rgb(236, 233, 7);
   font-weight: 600;
-  margin-right: 6.4rem;
-  margin-top: -2.3rem;
+  margin-right: 12.4rem;
+  margin-top: -2.4rem;
   text-align: center;
   background-color: transparent;
   border: 0.1px solid  rgba(147, 161, 226, 0.329);
