--- a/style.css
+++ b/style.css
@@ -1103,20 +1103,21 @@ font-size: 1rem;
 **/
 .customer-guarantee {
   width: 100%;
-  height: 27rem;
+  min-height: 42vh;
   align-items: center;
   justify-self: center;
   justify-content: center;
   display: flex;
-  background-color: var(--cl-featured-deal);
+  background-color: rgb(47, 47, 80);
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
 .customer-guarantee-container {
   width: 95%;
-  height: 25rem;
+  min-height: 40vh;
   display: flex;
+  flex-direction: column;
   align-self: center;
   justify-self: center;
   margin: 0.5rem;
@@ -1125,17 +1126,33 @@ font-size: 1rem;
   gap: 0.2rem;
   text-align: center;
   background: transparent;
-  border: 0.1px solid white;
+  border: 0.1px solid rgb(131, 126, 126);
 }
 
 .customer-left {
+  position: relative;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
   background: transparent;
-  width: 25%;
+  width: 45%;
+  border: 1px solid rgb(82, 82, 119);
+  box-shadow: 2px 2px 5px rgb(47, 47, 80),  -2px -2px 5px rgb(47, 47, 80);
   height: 100%;
 }
+
+.customer-left img {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  align-self: center;
+  border-radius: 50%;
+
+}
+
 
 .customer-right{
   display: flex;
@@ -1146,7 +1163,7 @@ font-size: 1rem;
   text-align: center;
   line-height: 1.5;
   font-size: 18px;
-  color: white;
+  color: rgb(241, 198, 5);
 }
 
 
@@ -1154,18 +1171,43 @@ font-size: 1rem;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 25rem;
+  min-height: 30vh;
   position: relative;
   align-items: center;
   justify-self: center;
   align-self: center;
   border: none;
   justify-content: flex-start;
-  background: rgba(196, 192, 192, 0.548);
-  border: 0.1px solid #ccc;
-  margin-bottom: 2rem;
+  background: #fff;
+  border: 4px solid black;
+  margin-bottom: 1rem;
   margin-top: 0.5rem;
   overflow: hidden;
+}
+
+
+.offer-banner {
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  font-weight: 600;
+  background: black;
+}
+
+.wrapper-container {
+position: relative;
+width: 100%;
+min-height: 100%;
+display: flex;
+flex-wrap: wrap;
+gap: 0.5rem;
+align-items: center;
+justify-content: space-around;
+justify-self: center;
 }
 
 .offer-container {
@@ -1174,19 +1216,19 @@ font-size: 1rem;
   align-items: center;
   justify-content: center;
   justify-self: center;
-  width: 30rem;
+  width: 21rem;
   gap: 0;
-  height: 12rem;
+  height: auto;
   background: rgb(48, 48, 80);
-  border: rgb(48, 48, 80);
+  border: 0.1px solid rgb(48, 48, 80);
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
 .offer-product-left {
   display: flex;
-  width: 48%;
-  height: 11rem;
+  width: 50%;
+  height: 10rem;
   flex-direction: column;
   background-color: white;
   align-items: center;
@@ -1196,8 +1238,8 @@ font-size: 1rem;
 
 .offer-product-right {
   display: flex;
-  width: 48%;
-  height: 11rem;
+  width: 50%;
+  height: 10rem;
   align-items: center;
   justify-content: center;
   background-color: transparent;
@@ -1211,14 +1253,14 @@ font-size: 1rem;
 
  .offer-deal-off {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   width: max-content;
   height: 2rem;
   color: rgb(236, 233, 7);
   font-weight: 600;
-  margin-right: 12.4rem;
-  margin-top: -2.4rem;
+  margin-right: 7.5rem;
+  margin-top: -2rem;
   text-align: center;
   background-color: transparent;
   border: 0.1px solid  rgba(147, 161, 226, 0.329);
@@ -1232,16 +1274,17 @@ height: 2rem;
 .offer-btn {
   border: 0.1px solid rgba(147, 161, 226, 0.329);
   width: 80%;
-  height: 1.9rem;
+  height: 1.6rem;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: white;
-  border-radius: 12px;
+  color: var(--cl-btn);
+  border-radius: 6px;
   font-size: 1rem;
-  background-color: var(--cl-btn);
+  border: 0.1px solid #ccc;
   transition: 1s ease-in-out;
+  cursor: pointer;
 }
 
 .offer-btn:hover {
@@ -1250,13 +1293,189 @@ height: 2rem;
 }
 
 
+/**
+* NEW ARRIVAL CONTAINER
+**/
+.new-arrival-container {
+  width: 100%;
+  position: relative;
+  min-height: auto;
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 1rem;
+  background: rgba(147, 161, 226, 0.329);
+  margin-bottom: 2rem;
+  border: 1px solid rgba(147, 161, 226, 0.329);
+}
+
+/**
+TOP CONTAINER
+**/
+.new-arrival-container-top {
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(36, 36, 53, 0.733);
+}
+
+.new-arrival-container-top span {
+  display: flex;
+  margin-left: 1rem;
+  color: var(--br-1px);
+  font-size: 1.8rem;
+  animation: slide-in 3s ease alternate infinite;
+}
+
+
+@keyframes slide-in  {
+  100% {
+    transform: translateX(5px);
+  }
+}
+
+.arrival-banner {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  height: 16rem;
+  background: red;
+}
+
+.arrival-banner img {
+  width: 100%;
+  height: 120%;
+}
+
+
+.new-arrival-section-container {
+width: 98%;
+height: auto;
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+justify-content: center;
+justify-self: center;
+}
+
+.new-arrival-products-container {
+  width: 21rem;
+  height: 12rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  background: transparent;
+  border-radius: 6px;
+  border: 1px solid  rgba(147, 161, 226, 0.329);
+  box-shadow: 2px 2px 5px rgb(184, 198, 209), -2px -2px 5px rgb(149, 181, 207);
+  margin: 0.5rem;
+}
+
+.new-arrival-products-top{
+width: 100%;
+height: 8rem;
+display: flex;
+align-items: center;
+justify-content: space-between;
+background: white;
+}
+
+.new-arrival-products-top img {
+  width: 65%;
+  height: 100%;
+}
 
 
 
+.arrival-title {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 35%;
+  align-items: center;
+  text-align: center;
+  justify-content: space-around;
+  color: rgb(219, 219, 235);
+  background: rgba(26, 49, 63, 0.795);
+  font-size: 1rem;
+  font-weight: 600;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.arrival-deal-off {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: max-content;
+  height: 30%;
+  padding: 0.6rem;
+  height: 1.4rem;
+  color: rgb(236, 80, 7);
+  font-weight: 600;
+  border-end-end-radius: 0.1rem;
+  border-start-start-radius: 0.1rem;
+  margin-right: -4.9rem;
+  margin-top: -1.4rem;
+  text-align: center;
+  background-color: var(--cl-btn);
+}
 
 
 
+.new-arrival-products-bottom {
+width: 20rem;
+height: 3.5rem;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-between;
+text-align: center;
+background-color: transparent;
+}
 
+.bottom-title-price {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 2.5rem;
+  ;
+}
+
+.bottom-title-price h3 {
+  font-size: 0.8rem;
+  color: rgb(43, 40, 31);
+}
+
+
+.new-arrival-btn {
+  border: 0.1px solid rgba(147, 161, 226, 0.329);
+  width: 80%;
+  height: 1.9rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  border-radius: 4px;
+  font-size: 1rem;
+  transition: 1s ease-in-out;
+  margin-bottom: 0.3rem;
+  background-color: var(--cl-btn);
+  cursor: pointer;
+}
+
+.new-arrival-btn:hover {
+  color: white;
+  background: rgb(54, 54, 177);
+}
 
 
 
