--- a/style.css
+++ b/style.css
@@ -682,7 +682,143 @@ align-self: center;
   font-size: 1rem;
 }
 
+/**
+* FLASH DEAL SECTION
+**/
+.flash-deal-container {
+  display: flex;
+  width: 100%;
+  height: 16rem;
+  align-items: center;
+  justify-content: space-between;
+  background: rgb(13, 15, 27);
+  margin-bottom: 2rem;
+}
 
+.flash-deal-content {
+  display: flex;
+  width: 98%;
+  height: 15rem;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.flash-circle-left {
+  width: 20%;
+  height: 15rem;
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+  line-height: 1.1;
+  margin-left: 0.4rem;
+  justify-content: space-between;
+  flex-direction: column;
+  background-color: rgb(4, 5, 8);
+  border: 0.1px solid #3f3d3d;
+}
+
+.deal-flash {
+  border: var(--cl-featured-product);
+  background:  rgb(39, 60, 126);
+  width: 75%;
+  height: 2rem;
+  margin-top: 0.8rem;
+  border-radius: 50%;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.deal-flash-img {
+  width: 100%;
+  height: 13rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.deal-flash-img img {
+  width: 100%;
+  height: 12rem;
+}
+
+.deal-flash h3 {
+  color: rgb(240, 186, 9);
+}
+
+.flash-product-container {
+  width: 80%;
+  height: 14rem;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: space-around;
+  background: rgb(4, 5, 8);
+  border-radius: 1.4rem;
+  border: 0.1px solid #3f3d3d;
+  box-shadow: 2px 2px 4px #3b3939, -2px -2px 4px #3b3939;
+}
+
+.product-flash {
+  width: 7rem;
+  height: 13rem;
+  display: flex;
+  background-color:transparent;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid var(--br-1px);
+  border-radius: 6px;
+}
+
+.flash-top {
+  width: 7rem;
+  height: 7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:  rgb(39, 60, 126);
+}
+
+.flash-top img {
+  width: 100%;
+  height: 100%;
+}
+
+.flash-bottom {
+  width: 100%;
+  height: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.1rem;
+  color:   rgb(32, 28, 15);
+  font-size: 0.8rem;
+  flex-direction: column;
+  background-color: var(--cl-featured-product);
+}
+
+.flash-bottom .old-price{
+  text-decoration: line-through;
+}
+
+.flash-bottom .flash-btn {
+  width: 80%;
+  border: none;
+  height: 1.4rem;
+  background-color: rgb(12, 79, 133);
+  color:  rgb(240, 186, 9);
+  border-radius: 2rem;
+  transition: 1s ease-in-out;
+}
+
+.flash-btn:hover {
+  background: rgb(19, 19, 53);
+}
 /**
 * FEATURED PRODUCT SECTION
 **/
@@ -1179,7 +1315,7 @@ font-size: 1rem;
   border: none;
   justify-content: flex-start;
   background: #fff;
-  border: 4px solid black;
+  border: 1px solid black;
   margin-bottom: 1rem;
   margin-top: 0.5rem;
   overflow: hidden;
@@ -1306,7 +1442,7 @@ height: 2rem;
   justify-content: space-between;
   flex-direction: column;
   gap: 1rem;
-  background: rgba(147, 161, 226, 0.329);
+  background: #fff;
   margin-bottom: 0;
   border: 1px solid rgba(147, 161, 226, 0.329);
 }
@@ -1345,6 +1481,7 @@ TOP CONTAINER
   width: 100%;
   height: 16rem;
   background: red;
+  border: 0.1px solid #ccc;
 }
 
 .arrival-banner img {
@@ -1373,8 +1510,8 @@ margin-bottom: 1.5rem;
   flex-direction: column;
   background: transparent;
   border-radius: 6px;
-  border: 1px solid  rgba(147, 161, 226, 0.329);
-  box-shadow: 2px 2px 5px rgb(184, 198, 209), -2px -2px 5px rgb(149, 181, 207);
+  border: 1px solid  rgba(212, 216, 231, 0.692);
+  box-shadow: 2px 2px 5px rgb(237, 243, 248), -2px -2px 5px rgb(237, 243, 248);
   margin: 0.5rem;
 }
 
@@ -1542,7 +1679,7 @@ FOOTER RIGHT
   align-items: center;
   justify-content: center;
   text-align: center;
-  background: rgba(46, 43, 43, 0.39);
+  background: red;
   margin-bottom: auto;
 }
 
