--- a/style.css
+++ b/style.css
@@ -1653,6 +1653,7 @@ FOOTER LEFT
   width: 100%;
   height: 20%;
   display: flex;
+  text-align: center;
   align-items: center;
   justify-content: center;
   background: rgb(15, 15, 15);
