--- a/style.css
+++ b/style.css
@@ -150,13 +150,13 @@ border: 0.1px solid var(--cl-primary)
 ** HERO SECTION
 /**/
 .hero-section {
-  position: relative;
+position: relative;
 width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
+background-color: rgba(177, 165, 167, 0.123);
+border: 1px solid rgba(243, 157, 171, 0.089);
 }
 
 /**
@@ -320,7 +320,7 @@ font-family: 'Courier New', Courier, monospace;
 .hero-circle {
   position: absolute;
   width: 14rem;
-  height: 16rem;
+  height: 14rem;
   display: flex;
   align-items: center;
   justify-self: self-end;
@@ -333,11 +333,18 @@ font-family: 'Courier New', Courier, monospace;
   display: flex;
   align-content: center;
   justify-content: center;
-  width: 25rem;
+  width: 20rem;
   height: 12rem;
-  margin-top: 8rem;
+  margin-top: 10rem;
   background-color: transparent;
   z-index: 1;
+}
+
+.img-container img {
+ width: 60%;
+ height: 110%;
+ margin-bottom: 0.4rem;
+ 
 }
 
 
@@ -349,6 +356,8 @@ font-family: 'Courier New', Courier, monospace;
   position: relative;
   min-height: 100vh;
 }
+
+
 
 /**
 * SECTION TITLE
@@ -2201,8 +2210,6 @@ width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
 }
 
 /**
@@ -2849,8 +2856,6 @@ width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
 }
 
 /**
@@ -3498,8 +3503,6 @@ width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
 }
 
 /**
@@ -4145,8 +4148,6 @@ width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
 }
 
 /**
@@ -4800,8 +4801,6 @@ width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
 }
 
 /**
@@ -5456,8 +5455,6 @@ width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
 }
 
 /**
@@ -6114,8 +6111,6 @@ width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
 }
 
 /**
@@ -6772,8 +6767,6 @@ width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
 }
 
 /**
@@ -7428,8 +7421,6 @@ width: 100%;
 height: 20rem;
 display: flex;
 justify-content: space-between;
-background-color: rgba(32, 185, 57, 0.315);
-border: 1px solid var(--cl-secondary);
 }
 
 /**
