--- a/sass/homekitchen.css
+++ b/sass/homekitchen.css
@@ -2147,7 +2147,7 @@ font-family: 'Courier New', Courier, monospace;
  }
 
 /* 6. Small tablets */
-@media (min-width: 600px) { 
+@media (max-width: 600px) { 
       nav {
   width: 100%;
   height: 2.2rem;
