--- a/sass/women.css
+++ b/sass/women.css
@@ -2170,12 +2170,12 @@ font-family: 'Courier New', Courier, monospace;
   position: relative;
   min-height: 100vh;
 }
-
-
  }
 
+
+
 /* 6. Small tablets */
-@media (min-width: 600px) { 
+@media (max-width: 600px) { 
       nav {
   width: 100%;
   height: 2.2rem;
