--- a/style.css
+++ b/style.css
@@ -5334,7 +5334,7 @@ align-self: center;
  }
 
 /* 6. Small tablets */
-@media (min-width: 600px) { 
+@media (max-width: 600px) { 
       nav {
   width: 100%;
   height: 2.2rem;
