--- a/admin.css
+++ b/admin.css
@@ -148,15 +148,22 @@ border: 0.1px solid var(--cl-primary)
 }
 
   .sidebar {
-    width: 230px;
     background: #3cb6cc;
     color: #fff;
     height: 100vh;
-    position: absolute;
     top: 3rem;
-    left: 0;
     padding: 20px;
     transition: 0.5s ease;
+  position: fixed; /* or absolute if you want */
+  left: 0;
+  width: 230px;      /* adjust */
+  height: 100vh;     /* full screen height */
+  border-right: 1px solid #ddd;
+
+  /* Make it scrollable */
+  overflow-y: auto;
+  scrollbar-width: thin;          /* Firefox */
+  scrollbar-color: #888 #f1f1f1;
   }
 
   .sidebar.active {
